organize directories and fix namespaces
